--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
-    "build-release": "react-scripts build && rm -r ./build/forum-templates && if [ -d '../public/console' ]; then rm -r ../public/console; fi; cp -rf build ../public/console",
+    "build-release": "react-scripts build && rm -r ./build/forum-templates && if [ -d '../public/console' ]; then rm -r ../public/console; fi; cp -rf build ../public/console; cd ../public/console; ln -sf ../forum-templates forum-templates",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
