--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,30 @@ version: '3.1'
 
 services:
   backend:
-    image: backend:latest
-
+    image: backend
+    ports:
+      - 3000:3000
+    build:
+      context: backend
+      dockerfile: Dockerfile
+        
   forum-console:
-    image: forum-console:latest
-  
+    image: forum-console
+    ports:
+      - 8080:80
+    environment:
+      - NGINX_HOST=localhost
+      - NGINX_PORT=80
+    build:
+      context: frontend
+      dockerfile: Dockerfile
+
   db:
     image: postgres:alpine
     restart: always
     environment:
       POSTGRES_PASSWORD: test
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - ./backend/postgresdb:/var/lib/postgresql/data
     ports:
       - 5432:5432
-    
