--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: backend
     ports:
       - 3000:3000
+    links:
+      - db:database
     build:
       context: backend
       dockerfile: Dockerfile
@@ -12,7 +14,7 @@ services:
   forum-console:
     image: forum-console
     ports:
-      - 8080:80
+      - "8080:80"
     environment:
       - NGINX_HOST=localhost
       - NGINX_PORT=80
@@ -24,8 +26,9 @@ services:
     image: postgres:alpine
     restart: always
     environment:
+      POSTGRES_DB: postgres
       POSTGRES_PASSWORD: test
     volumes:
       - ./backend/postgresdb:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - "5432:5432"
