--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - 3000:3000
     links:
       - db:database
+    environment:
+      DB_HOST: database
     build:
       context: backend
       dockerfile: Dockerfile
