--- a/production.yml
+++ b/production.yml
@@ -31,5 +31,5 @@ services:
       POSTGRES_PASSWORD: test
     volumes:
       - ./backend/postgresdb:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    expose:
+      - 5432
